Fix whitespace in header
This allows extra whitespace in the header at larger screen sizes
to be allocated to the left of the user link, h/t @oxaudo

--- a/src/desktop/components/main_layout/header/index.styl
+++ b/src/desktop/components/main_layout/header/index.styl
@@ -22,6 +22,7 @@
 
 #main-layout-header-left
   flex-grow 1
+  max-width 850px
   #main-layout-header-minimal-title
     display none
   #main-layout-search-bar-container
@@ -49,6 +50,7 @@
   flex-grow 0
   flex-shrink 0
   text-align right
+  margin-left auto
 
 .mlh-nav-link
   position relative
